--- a/templates/index.html
+++ b/templates/index.html
@@ -6,18 +6,21 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
-
     <div class="container-fluid">
-      <div class="row">
+
+      <div class="row hidden-xs-down">
         <div class="col">
           <h1>PiPowerMeter</h1>
+          <hr>
         </div>
       </div>
       <div class="row">
-        
-      </div>
-    </div>
+        <div class="col">
 
+        </div>
+      </div>
+
+    </div> <!-- /container-fluid -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
