--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="row">
         <div class="col">
-          {{ data["ip"] }}
+          {{ data.ip }}
         </div>
       </div>
 
