--- a/templates/index.html
+++ b/templates/index.html
@@ -24,30 +24,30 @@
       <div id="meters"> <!-- Meters -->
         <div class="row">
           <div class="col text-center">
-            <h2>{{ data.value }}</h2>
+            <h2>00 kWh</h2>
             <p>
-              {{ data.desc }}
+              Aujourd'hui
             </p>
           </div>
           <div class="col text-center">
-            <h2>{{ data.value }}</h2>
+            <h2>00 kWh</h2>
             <p>
-              {{ data.desc }}
+              Cette semaine
             </p>
           </div>
         </div>
 
         <div class="row">
           <div class="col text-center">
-            <h2>{{ data.value }}</h2>
+            <h2>00 kWh</h2>
             <p>
-              {{ data.desc }}
+              Ce mois-ci
             </p>
           </div>
           <div class="col text-center">
-            <h2>{{ data.value }}</h2>
+            <h2>00 kWh</h2>
             <p>
-              {{ data.desc }}
+              Cette année
             </p>
           </div>
         </div>
