--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       <hr>
       <div class="row"> <!-- IP -->
         <div class="col">
-          Ip : {{ data.ip }}
+          Ip : <span id="ip">{{ data.ip }}</span>
         </div>
         <div class="col text-right">
           <form class="" action="">
