--- a/templates/index.html
+++ b/templates/index.html
@@ -44,10 +44,10 @@
       <div id="meters"> <!-- Meters -->
         <div class="row">
           <div class="col text-center">
-            <h2><span id="data1"></span> kWh</h2>
             <p>
-              Aujourd'hui
+              Consommation instantanée
             </p>
+            <h2><span id="data1"></span> W</h2>
           </div>
           <div class="col text-center">
             <h2><span id="data2"></span> kWh</h2>
