--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,14 @@
           <h1>PiPowerMeter</h1>
         </div>
       </div>
+
       <hr>
-      <div class="row"> <!-- IP -->
-        <div class="col">
+
+      <div class="row"> <!-- HEADER INFOS -->
+        <div class="col"> <!-- IP -->
           Ip : <span id="ip">{{ data.ip }}</span>
         </div>
-        <div class="col text-right">
+        <div class="col text-right"> <!-- RENDER SPEED -->
           <form class="" action="">
             Actualisation :
             <div class="form-check form-check-inline">
@@ -39,6 +41,7 @@
           </form>
         </div>
       </div>
+
       <hr>
 
       <div id="meters"> <!-- Meters -->
