--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
       <div id="meters"> <!-- Meters -->
         <div class="row">
           <div class="col text-center">
-            <h2><span id="data1"></span> W</h2>
+            <h2><span id="data1"></span> kW</h2>
             <p>
               Consommation instantanée
             </p>
