--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
       <div class="row hidden-xs-down"> <!-- Title -->
         <div class="col">
-          <h1>PiPowerMeter</h1><small>Ip : <span id="ip">{{ data.ip }}</span></small>
+          <h1>PiPowerMeter<small>Ip : <span id="ip">{{ data.ip }}</span></small></h1>
         </div>
       </div>
 
@@ -19,7 +19,7 @@
       <div class="row"> <!-- HEADER INFOS -->
         <div class="col">
           <p>
-            Consommation instantanée : <span class="h2"><span id="data1"></span> kW</span>
+            Consommation instantanée : <strong><span id="data1"></span> kW</strong>
           </p>
         </div>
         <div class="col text-right"> <!-- RENDER SPEED -->
