--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
       <div class="row hidden-xs-down"> <!-- Title -->
         <div class="col">
-          <h1>PiPowerMeter<small>Ip : <span id="ip">{{ data.ip }}</span></small></h1>
+          <h1>PiPowerMeter <small>Ip : <span id="ip">{{ data.ip }}</span></small></h1>
         </div>
       </div>
 
@@ -18,9 +18,7 @@
 
       <div class="row"> <!-- HEADER INFOS -->
         <div class="col">
-          <p>
-            Consommation instantanée : <strong><span id="data1"></span> kW</strong>
-          </p>
+          Consommation instantanée : <strong><span id="data0"></span> kW</strong>
         </div>
         <div class="col text-right"> <!-- RENDER SPEED -->
           <form class="" action="">
@@ -49,9 +47,9 @@
       <div id="meters"> <!-- Meters -->
         <div class="row">
           <div class="col text-center">
-            <h2><span id="data1"></span> kW</h2>
+            <h2><span id="data1"></span> kWh</h2>
             <p>
-              Consommation instantanée
+              Aujourd'hui
             </p>
           </div>
           <div class="col text-center">
