--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
       <div class="row"> <!-- HEADER INFOS -->
         <div class="col">
-          Consommation instantanée : <strong><span id="data0"></span> kW</strong>
+          Consommation instantanée : <strong><span id="data0">#</span> kW</strong>
         </div>
         <div class="col text-right"> <!-- RENDER SPEED -->
           <form class="" action="">
@@ -47,13 +47,13 @@
       <div id="meters"> <!-- Meters -->
         <div class="row">
           <div class="col text-center">
-            <h2><span id="data1"></span> kWh</h2>
+            <h2><span id="data1">#</span> kWh</h2>
             <p>
               Aujourd'hui
             </p>
           </div>
           <div class="col text-center">
-            <h2><span id="data2"></span> kWh</h2>
+            <h2><span id="data2">#</span> kWh</h2>
             <p>
               Cette semaine
             </p>
@@ -62,13 +62,13 @@
 
         <div class="row">
           <div class="col text-center">
-            <h2><span id="data3"></span> kWh</h2>
+            <h2><span id="data3">#</span> kWh</h2>
             <p>
               Ce mois-ci
             </p>
           </div>
           <div class="col text-center">
-            <h2><span id="data4"></span> kWh</h2>
+            <h2><span id="data4">#</span> kWh</h2>
             <p>
               Cette année
             </p>
